--- a/inversion_v2.ipynb
+++ b/inversion_v2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -10,6 +10,8 @@
      "output_type": "stream",
      "text": [
       "\u001b[32m\u001b[1m Activating\u001b[22m\u001b[39m environment at `~/Julia/Fluidos_Conformes/Conf_Fluids/Project.toml`\n",
+      "\u001b[32m\u001b[1m   Updating\u001b[22m\u001b[39m registry at `~/.julia/registries/General`\n",
+      "######################################################################### 100.0%\n",
       "\u001b[32m\u001b[1m  Resolving\u001b[22m\u001b[39m package versions...\n",
       "\u001b[32m\u001b[1mNo Changes\u001b[22m\u001b[39m to `~/Julia/Fluidos_Conformes/Conf_Fluids/Project.toml`\n",
       "\u001b[32m\u001b[1mNo Changes\u001b[22m\u001b[39m to `~/Julia/Fluidos_Conformes/Conf_Fluids/Manifest.toml`\n"
@@ -26,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -35,7 +37,7 @@
        "F (generic function with 1 method)"
       ]
      },
-     "execution_count": 109,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -49,6 +51,7 @@
     "#@variables \n",
     "\n",
     "    μ = flu[f[:μ]]  # esto es -μ\n",
+    "    #μ = view(flu,1)\n",
     "    T = (μ)^(-1//2) # use μ positive, so I changed μ -> -μ\n",
     "    v = flu[f[:v]]\n",
     "    χ₀ = χ[1]\n",
@@ -65,9 +68,7 @@
     "    A = (-12 * χ₂/μ^4)*[3(2γ^2 - 1)  3v*(6γ^2 - 1)    3v^2 ;\n",
     "                v*(6γ^2 - 1)  (6γ^2*(1 + 2v^2) - 1)  v*(v^2 + 2) ;\n",
     "                (6γ^2 * v^2 + 1)  v*(6γ^2*(2 + v^2) - 1)  (2v^2 + 1)]\n",
-    "#Φ₂ = -μ/12/χ₂\n",
-    "#Φ₂ = -u[f[:μ]]/12/χ₂\n",
-    "#γ = 1/sqrt(1 - u[f[:v]]^2)\n",
+    "\n",
     "    e = 4//3*ρ*(γ^2 - 1//4) + 2v*γ*Q + v^2*τ\n",
     "    s = 4//3*ρ*γ^2*v + (v^2+1//1)γ*Q + v*τ;\n",
     "\n",
@@ -84,40 +85,57 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Para testear usamos: \n",
+    "`\n",
+    "flu = [10.0; 0.2; 1.1; 1.5; 1.2]\n",
+    "con = [0.1366314976448222; 0.07009306769467444; 0.06115332989597844; 0.07178418128379448; 0.04927907295689818]\n",
+    "chi = [-1.0; -1.0; -5.0]\n",
+    "`\n",
+    "\n",
+    "**Ojo que hay que cambiar el signo a mu!*"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  0.000013 seconds (29 allocations: 2.375 KiB)\n"
+      "  0.146915 seconds (392.21 k allocations: 20.885 MiB)\n"
      ]
     },
     {
      "data": {
       "text/plain": [
        "5-element Array{Float64,1}:\n",
-       " -708.882891258125\n",
-       " -535.5019804060945\n",
-       "  -83.5570173600189\n",
-       "  -91.71095528740291\n",
-       "  -61.987327723098716"
+       " -1.6263032587282567e-18\n",
+       " -1.3877787807814457e-17\n",
+       " -3.469446951953614e-18\n",
+       "  3.469446951953614e-18\n",
+       "  1.734723475976807e-18"
       ]
      },
-     "execution_count": 110,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "@time F([1;0.2;1;1;1],[1;2;2;2;2],[1;1;1])"
+    "flu = [10.0; 0.2; 1.1; 1.5; 1.2]\n",
+    "con = [0.1366314976448222; 0.07009306769467444; 0.06115332989597844; 0.07178418128379448; 0.04927907295689818]\n",
+    "chi = [-1.0; -1.0; -5.0]\n",
+    "@time F(flu,con,chi)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -126,7 +144,7 @@
        "5"
       ]
      },
-     "execution_count": 111,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -137,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -146,7 +164,7 @@
        "(Num[f₁, f₂, f₃, f₄, f₅], Num[c₁, c₂, c₃, c₄, c₅], Num[p₁, p₂, p₃])"
       ]
      },
-     "execution_count": 112,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -157,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -166,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -175,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -184,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -193,21 +211,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "5×5 Array{Float64,2}:\n",
-       " 2.63082e15  -6.43585e12  -1.79758e12  -1.02667e13  -1.00254e12\n",
-       " 2.38246e15  -6.4606e12   -1.7393e12   -8.94213e12  -1.02328e12\n",
-       " 6.80095e12  -4.97913e10  -5.54305e9   -1.37851e10  -9.5029e8\n",
-       " 6.47008e12  -4.85838e10  -4.59502e9   -1.36694e10  -1.17552e9\n",
-       " 5.81137e12  -4.71909e10  -4.06317e9   -1.18485e10  -1.37347e9"
+       " 2.1326e8   -7.36384e6       -2.47609e6  -1.29663e7      -1.62161e6\n",
+       " 1.91586e8  -7.38982e6       -2.37722e6  -1.10918e7      -1.64112e6\n",
+       " 7.87715e6  -8.70425e5  -107976.0        -2.51339e5  -18105.2\n",
+       " 7.43887e6  -8.45607e5   -83779.5        -2.53325e5  -24170.9\n",
+       " 6.54349e6  -8.1213e5    -72674.7        -2.10055e5  -29720.8"
       ]
      },
-     "execution_count": 117,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -218,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -227,7 +245,7 @@
        "NR_step! (generic function with 1 method)"
       ]
      },
-     "execution_count": 118,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -240,27 +258,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "5-element Array{Float64,1}:\n",
-       " -0.0033620762733903575\n",
-       " -0.0008881503725888251\n",
-       " -0.0027372121371933567\n",
-       " -0.0036853292062835052\n",
-       " -0.004343251011975191"
+       " -0.00041226333496524603\n",
+       " -0.0047830657349550165\n",
+       " -0.004763752786428821\n",
+       " -0.00011584671176567696\n",
+       " -3.0158418865333658e-5"
       ]
      },
-     "execution_count": 119,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "p = [1,1,1]\n",
+    "p = [-1.0; -1.0; -5.0]\n",
     "u0 = @SVector[1.0, 0.30, 2.0, 4.0, 5.0]\n",
     "y = F(u0,[0,0,0,0,0],p)\n",
     "\n",
@@ -272,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -280,13 +298,13 @@
       "text/plain": [
        "5-element SArray{Tuple{5},Float64,1,5} with indices SOneTo(5):\n",
        " 1.0000000000000002\n",
-       " 0.30000000000000027\n",
-       " 1.999999999999996\n",
-       " 4.0000000000000036\n",
+       " 0.30000000000000004\n",
+       " 2.0000000000000004\n",
+       " 4.000000000000002\n",
        " 5.000000000000003"
       ]
      },
-     "execution_count": 120,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -298,21 +316,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[1.0000000000000007, 0.3000000000000006, 1.9999999999999916, 4.000000000000007, 5.0000000000000115]\n",
-      "[-7.645439836778678e-12, -4.661160346586257e-12, -1.1679546219056647e-13, -1.2168044349891716e-13, -1.4477308241112041e-13]\n"
+      "[1.0000000000000002, 0.3000000000000001, 2.0, 4.000000000000002, 5.0]\n",
+      "[-2.000888343900442e-11, -1.8189894035458565e-11, -4.3076653355456074e-14, -2.0161650127192843e-13, -2.007283228522283e-13]\n"
      ]
     }
    ],
    "source": [
-    "#u0 = @SVector[1.0, 0.30, 3.0, 4.0, 3.0]\n",
-    "u0 = [1.0; 0.30; 3.0; 4.0; 3.0]\n",
+    "u0 = @SVector[1.0, 0.30, 3.0, 4.0, 3.0]\n",
+    "#u0 = [1.0; 0.30; 3.0; 4.0; 3.0]\n",
     "for i ∈ 1:25\n",
     "    u0 = NR_step!(F, Jac, u0, y, p)\n",
     "end\n",
@@ -322,80 +340,82 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [],
    "source": [
     "M = 10^3\n",
-    "u0 = [(i+j)/(N+M) for i ∈ 1:N, j ∈ 1:M]\n",
-    "#u0 = rand(N,M)\n",
+    "# it does not work with SMatrix\n",
+    "for j ∈ 1:M\n",
+    "        ui[:,j] = [10.0; 0.2; 1.1; 1.5; 1.2] + 0.1*rand(5)\n",
+    "end\n",
+    "#u0 = SMatrix{N,M}([(i+j)/(N+M) for i ∈ 1:N, j ∈ 1:M])\n",
+    "#u0 = @SMatrix rand(N,M)\n",
+    "#yy = @SMatrix rand(N,M)\n",
+    "#yy = SMatrix{N,M}([0. for i ∈ 1:N, j ∈ 1:M])\n",
     "yy = zeros(N,M)\n",
     "for j ∈ 1:M\n",
-    "    yy[:,j] = F(u0[:,j],[0,0,0,0,0],p)\n",
+    "    yy[:,j] = F(ui[:,j],[0,0,0,0,0],p)\n",
     "#    yy[:,j] = convert(Array{Float64,1},F(u0[:,j],yy[:,j],p))\n",
     "end"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1.2378628619885348e-23"
+       "2.8291798035590816e-34"
       ]
      },
-     "execution_count": 123,
+     "execution_count": 79,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "j = 200\n",
-    "F(u0[:,j],yy[:,j], p)'*F(u0[:,j],yy[:,j], p)"
+    "F(ui[:,j],yy[:,j], p)'*F(ui[:,j],yy[:,j], p)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "5×1000 Array{Float64,2}:\n",
-       " 0.00190852  0.00294407  0.00395205  …  0.994007  0.995024  0.995957\n",
-       " 0.00289294  0.00393125  0.00496267     0.995022  0.996006  0.997009\n",
-       " 0.00389643  0.00493491  0.00592383     0.995949  0.99696   0.997979\n",
-       " 0.00493362  0.00588463  0.0068849      0.997001  0.99791   0.998993\n",
-       " 0.00588939  0.00695836  0.00789809     0.997921  0.998988  0.999942"
+       " 10.048     10.0841    10.0105    …  10.081     10.073     10.0597\n",
+       "  0.205523   0.255179   0.203597      0.209446   0.237672   0.279965\n",
+       "  1.10929    1.15631    1.11421       1.18578    1.18011    1.1229\n",
+       "  1.58835    1.53558    1.5692        1.50319    1.56602    1.58345\n",
+       "  1.25486    1.27512    1.24108       1.28396    1.24105    1.24204"
       ]
      },
-     "execution_count": 124,
+     "execution_count": 80,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "u0 = (u0 .- 0.0001 .*rand(N,M))"
+    "u0 = (ui .- 0.0001 .*rand(N,M))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "iter_max reached j = 1\n",
-      "iter_max reached j = 2\n",
-      "iter_max reached j = 4\n",
-      "iter_max reached j = 6\n",
-      "  0.208967 seconds (505.55 k allocations: 38.495 MiB, 9.87% gc time)\n"
+      "  0.004709 seconds (53.94 k allocations: 4.104 MiB)\n"
      ]
     }
    ],
