finishing transformation functions

--- a/inversion_v2.ipynb
+++ b/inversion_v2.ipynb
@@ -1,6 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Inversion function\n",
+    "\n",
+    "We invert between conservative and \"fluid\"* variables. "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -27,6 +36,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### The Function to invert\n",
+    "\n",
+    "We first define the function to invert. \n",
+    "We define it first as a numerical function. Then we promote it to a symbolic one and compute its Jacobian. \n",
+    "\n",
+    "    Notice that here $\\mu \\to -\\mu$ we then undo when defining the final maps\n",
+    "\n",
+    "    Notice that this can still be optimized in many ways... "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 53,
    "metadata": {},
@@ -44,11 +67,9 @@
    ],
    "source": [
     "function F(flu,con,χ)\n",
+    "    #the use of a dictionary can go away in any case.\n",
     "    f = Dict(:μ => 1, :v => 2, :x1 => 3, :x2 => 4,:x3 => 5) #para acordarse de que campo asignamos a cada componente del vector\n",
     "    c = Dict(:e => 1, :s => 2, :c1 => 3, :c2 => 4,:c3 => 5)\n",
-    "#@variables flu[1:N], con[1:N], χ[1:3] #variables para manipulación algebraica\n",
-    "#@variables χ₀, χ₁, χ₂\n",
-    "#@variables \n",
     "\n",
     "    μ = flu[f[:μ]]  # esto es -μ\n",
     "    #μ = view(flu,1)\n",
@@ -95,7 +116,7 @@
     "chi = [-1.0; -1.0; -5.0]\n",
     "`\n",
     "\n",
-    "**Ojo que hay que cambiar el signo a mu!*"
+    "**Ojo que hay que cambiar el signo a $\\mu$!**"
    ]
   },
   {
@@ -134,8 +155,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Once we are sure about the function we promote it to a **symbolic function** and compute the Jacobian "
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 159,
    "metadata": {},
    "outputs": [
     {
@@ -144,32 +172,14 @@
        "5"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 159,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "N=5"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(Num[f₁, f₂, f₃, f₄, f₅], Num[c₁, c₂, c₃, c₄, c₅], Num[p₁, p₂, p₃])"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
+    "N=5\n",
+    "\n",
     "@variables f[1:N], c[1:N], p[1:3]"
    ]
   },
@@ -231,7 +241,21 @@
     }
    ],
    "source": [
-    "Jac(rand(5),rand(5),rand(3))"
+    "Jac(rand(5),rand(5),rand(3)) #check that it returns a metric"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "One can make the inversion in a symbolic way, but it is a very long expression, so probably takes more time to evaluate than to invert."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now we define the Newton-Raphson step."
    ]
   },
   {
@@ -257,22 +281,29 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "To check we give an arbitrary vector u0, and use the equation to compute y (using y=0 in F). We then perturbe u0 use the scheme to get u0 again."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 170,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "5-element Array{Float64,1}:\n",
-       " -0.00041226333496524603\n",
-       " -0.0047830657349550165\n",
-       " -0.004763752786428821\n",
-       " -0.00011584671176567696\n",
-       " -3.0158418865333658e-5"
+       "  5.002220859751105e-12\n",
+       "  0.0\n",
+       " -2.6201263381153694e-14\n",
+       "  1.127986593019159e-13\n",
+       "  2.930988785010413e-14"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 170,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -282,69 +313,55 @@
     "u0 = @SVector[1.0, 0.30, 2.0, 4.0, 5.0]\n",
     "y = F(u0,[0,0,0,0,0],p)\n",
     "\n",
-    "F(u0.+0.005.*rand(5),y ,p)\n",
-    "\n",
-    "#Jac(u0,y .+0.005.*rand(5),p);\n",
-    "F(u0,y .+0.005.*rand(5),p)"
+    "F(u0, y ,p)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "5-element SArray{Tuple{5},Float64,1,5} with indices SOneTo(5):\n",
-       " 1.0000000000000002\n",
-       " 0.30000000000000004\n",
-       " 2.0000000000000004\n",
-       " 4.000000000000002\n",
-       " 5.000000000000003"
-      ]
-     },
-     "execution_count": 42,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "ui = @SVector[1.0, 0.30, 3.0, 4.0, 3.0]\n",
-    "NR_step!(F, Jac, u0, y, p)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 176,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[1.0000000000000002, 0.3000000000000001, 2.0, 4.000000000000002, 5.0]\n",
-      "[-2.000888343900442e-11, -1.8189894035458565e-11, -4.3076653355456074e-14, -2.0161650127192843e-13, -2.007283228522283e-13]\n"
+      "[1.0, 0.29999999999999993, 2.0000000000000013, 4.000000000000001, 5.0]\n",
+      "\n",
+      "[2.1373125491663814e-11, 4.547473508864641e-12, 3.717026686445024e-13, 7.94031507211912e-13, 2.5490720645393594e-13]\n",
+      "\n",
+      "error = 2.1870611221190414e-11\n"
      ]
     }
    ],
    "source": [
-    "u0 = @SVector[1.0, 0.30, 3.0, 4.0, 3.0]\n",
+    "u0 = @SVector[1.0, 0.30, 2.0, 4.0, 5.0] + 0.1*rand(5)\n",
     "#u0 = [1.0; 0.30; 3.0; 4.0; 3.0]\n",
     "for i ∈ 1:25\n",
     "    u0 = NR_step!(F, Jac, u0, y, p)\n",
     "end\n",
     "println(u0)\n",
-    "println(F(u0,y,p))"
+    "println()\n",
+    "println(F(u0,y,p))\n",
+    "println()\n",
+    "println(\"error = $(sqrt(F(u0,y,p)'*F(u0,y,p)))\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We see that it is working correctly with 25 iterations.\n",
+    "Now we define a vector of variables, like the case when we are solving the pde equation. Something is wrong when trying to use static arrays here, don't know way. But in any case it is fast."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 182,
    "metadata": {},
    "outputs": [],
    "source": [
     "M = 10^3\n",
+    "ui = zeros(N,M)\n",
     "# it does not work with SMatrix\n",
     "for j ∈ 1:M\n",
     "        ui[:,j] = [10.0; 0.2; 1.1; 1.5; 1.2] + 0.1*rand(5)\n",
@@ -362,16 +379,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 183,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "2.8291798035590816e-34"
+       "2.715862148139813e-34"
       ]
      },
-     "execution_count": 79,
+     "execution_count": 183,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -383,21 +400,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 184,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "5×1000 Array{Float64,2}:\n",
-       " 10.048     10.0841    10.0105    …  10.081     10.073     10.0597\n",
-       "  0.205523   0.255179   0.203597      0.209446   0.237672   0.279965\n",
-       "  1.10929    1.15631    1.11421       1.18578    1.18011    1.1229\n",
-       "  1.58835    1.53558    1.5692        1.50319    1.56602    1.58345\n",
-       "  1.25486    1.27512    1.24108       1.28396    1.24105    1.24204"
+       " 10.0982    10.0036    10.0639    …  10.0268    10.0079    10.0453\n",
+       "  0.224099   0.208545   0.270358      0.244236   0.215885   0.241525\n",
+       "  1.19602    1.18512    1.11974       1.10932    1.18628    1.1795\n",
+       "  1.58214    1.49999    1.53093       1.58623    1.57069    1.58827\n",
+       "  1.29732    1.25374    1.28725       1.25256    1.2229     1.21069"
       ]
      },
-     "execution_count": 80,
+     "execution_count": 184,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -407,20 +424,28 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Notice that we square tol for we use it on the square of the error. \n"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 186,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  0.004709 seconds (53.94 k allocations: 4.104 MiB)\n"
+      "  0.009951 seconds (53.94 k allocations: 4.104 MiB)\n"
      ]
     }
    ],
    "source": [
     "tol = 10^(-8)\n",
+    "tol = tol^2\n",
     "iter_max = 5\n",
     "\n",
     "@time begin\n",
@@ -439,11 +464,227 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now that we have checked all parts we define the final functions:"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 192,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "c_to_f!"
+      ]
+     },
+     "execution_count": 192,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\"\"\"\n",
+    "    c_to_f!(flu, con, p)\n",
+    "\n",
+    "Compute the fluid variables `flu` from the conservative `con` ones.\n",
+    "It inverts the function `F(flu,con,χ) = con(flu,χ) - con` using \n",
+    "Newto-Raphson method.\n",
+    "\n",
+    "As parameters have: \n",
+    "    χ = Function parameters, \n",
+    "    tol = error tolerance for the inversion, \n",
+    "    iter_max = maximum iteration number for the NR method, \n",
+    "    N = number of variables (5 here), \n",
+    "    M = dimension of vector of variables\n",
+    "\n",
+    "# Examples\n",
+    "```julia-repl\n",
+    "julia> \n",
+    "tol = 10^(-16)\n",
+    "iter_max = 40\n",
+    "χ = [-1.0; -1.0; -5.0]\n",
+    "M=1\n",
+    "N=5\n",
+    "p = (χ, tol, iter_max, N, M)\n",
+    "flu = [-10.0; 0.2; 1.1; 1.5; 1.2]\n",
+    "con = [0.1366314976448222; 0.07009306769467444; 0.06115332989597844; 0.07178418128379448; 0.04927907295689818]\n",
+    "c_to_f!(flu + 0.1* rand(N), con, p) - con\n",
+    "5×1 Array{Float64,2}:\n",
+    "  2.1953994178147695e-11\n",
+    " -1.393440918207034e-12\n",
+    " -4.0323300254385686e-13\n",
+    " -1.3405498933138915e-11\n",
+    "  1.2895684520231043e-11\n",
+    "```\n",
+    "\"\"\"\n",
+    "function c_to_f!(flu, con, p)\n",
+    "    χ, tol, iter_max, N, M = p\n",
+    "    for j ∈ 1:M\n",
+    "        flu[1,j] = -flu[1,j]\n",
+    "        iter = 1\n",
+    "        while F(flu[:,j],con[:,j], χ)'*F(flu[:,j],con[:,j], χ) > tol && iter < iter_max\n",
+    "            flu[:,j] = NR_step!(F, Jac, flu[:,j], con[:,j], χ)\n",
+    "            iter = iter + 1\n",
+    "            if iter == iter_max \n",
+    "            println(\"iter_max reached j = $j\")\n",
+    "            end\n",
+    "        end\n",
+    "    #println(iter)\n",
+    "        flu[1,j] = -flu[1,j]\n",
+    "    end\n",
+    "    return flu[:,:]\n",
+    "end"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 195,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "?c_to_f!;"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 187,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tol = 10^(-16)\n",
+    "iter_max = 40\n",
+    "χ = [-1.0; -1.0; -5.0]\n",
+    "M=1\n",
+    "N=5\n",
+    "p = (χ, tol, iter_max, N, M)\n",
+    "flu = [-10.0; 0.2; 1.1; 1.5; 1.2]\n",
+    "con = [0.1366314976448222; 0.07009306769467444; 0.06115332989597844; 0.07178418128379448; 0.04927907295689818]\n",
+    "flu_i = flu + 0.1*rand(5);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 188,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  0.001815 seconds (922 allocations: 75.406 KiB)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "5×1 Array{Float64,2}:\n",
+       "  2.1953994178147695e-11\n",
+       " -1.393440918207034e-12\n",
+       " -4.0323300254385686e-13\n",
+       " -1.3405498933138915e-11\n",
+       "  1.2895684520231043e-11"
+      ]
+     },
+     "execution_count": 188,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "@time c_to_f!(flu_i, con, p) - flu"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 197,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "f_to_c!"
+      ]
+     },
+     "execution_count": 197,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\"\"\"\n",
+    "    f_to_c!(flu, con, p)\n",
+    "\n",
+    "Compute the conservative `con` variables for the fluid ones `flu`.\n",
+    "It uses the function `F(flu,con,χ) = con(flu,χ) - con` with `con = 0`.\n",
+    "\n",
+    "As parameters have: \n",
+    "    χ = Function parameters\n",
+    "    N = number of variables (5 here), \n",
+    "    M = dimension of vector of variables\n",
+    "\n",
+    "# Examples\n",
+    "```julia-repl\n",
+    "julia> \n",
+    "χ = [-1.0; -1.0; -5.0]\n",
+    "M=1\n",
+    "N=5\n",
+    "p = (χ, N, M)\n",
+    "flu = [-10.0; 0.2; 1.1; 1.5; 1.2]\n",
+    "con = [0.1366314976448222; 0.07009306769467444; 0.06115332989597844; 0.07178418128379448; 0.04927907295689818]\n",
+    "f_to_c!(flu,con+rand(N),p) - con\n",
+    "5×1 Array{Float64,2}:\n",
+    "  0.0\n",
+    " -1.3877787807814457e-17\n",
+    "  0.0\n",
+    "  0.0\n",
+    "  0.0\n",
+    "```\n",
+    "\"\"\"\n",
+    "function f_to_c!(flu, con, p)\n",
+    "    χ, N, M = p\n",
+    "    y = zeros(N)\n",
+    "    for j ∈ 1:M\n",
+    "        flu[1,j] = -flu[1,j]\n",
+    "        con[:,j] = F(flu[:,j],y, χ)\n",
+    "    end\n",
+    "    return con[:,:]\n",
+    "end"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 196,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5×1 Array{Float64,2}:\n",
+       "  0.0\n",
+       " -1.3877787807814457e-17\n",
+       "  0.0\n",
+       "  0.0\n",
+       "  0.0"
+      ]
+     },
+     "execution_count": 196,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "N=5\n",
+    "M=1\n",
+    "p = (χ, N, M)\n",
+    "χ = [-1.0; -1.0; -5.0]\n",
+    "flu = [-10.0; 0.2; 1.1; 1.5; 1.2]\n",
+    "con = [0.1366314976448222; 0.07009306769467444; 0.06115332989597844; 0.07178418128379448; 0.04927907295689818]\n",
+    "f_to_c!(flu,con+rand(N),p) - con"
+   ]
   },
   {
    "cell_type": "code",
