adding flux function

--- a/inversion.ipynb
+++ b/inversion.ipynb
@@ -518,11 +518,81 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "$$G_{ab} = \\nabla u \\nabla u \\omega$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$\\phi^{ab} = \\sqrt(h) h^{ab}$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$\\phi^{cd}\\nabla_c \\nabla_d \\phi^{ab} = (\\nabla \\phi)^2$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$\\nabla_c \\phi^{cd} = 0$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$B^i = \\epsilon^{ijk} \\nabla_j A_k$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$\\Delta A_k = J_k$,  $\\nabla_k A^k = 0$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$n \\wedge A = 0$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$\\partial_k(\\sqrt(h)A^k) = 0$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$\\partial_n A_n = geo A_n$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$A = \\frac{k \\wedge x}{|x|^3}$\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$x \\wedge"
+   ]
   }
  ],
  "metadata": {
