adding jl files and tests

--- a/Flux_function.ipynb
+++ b/Flux_function.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -27,7 +27,7 @@
        "Flux (generic function with 1 method)"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -53,29 +53,28 @@
     "    f₂ = 4//3 * ρ*(γ^2*v^2 + 1//4) + 2v*γ*Q + τ\n",
     "    f₃ = -χ₁*γ*v*(6*γ^2 - 1)/μ^3/T - 12χ₂*(v*(6γ^2 - 1)*x1 + (6γ^2*(2v^2 + 1)-1)*x2 + v*(v^2+2)*x3)/μ^4\n",
     "    f₄ = -χ₁*γ*(6γ^2*v^2+1)/μ^3/T - 12χ₂*((6γ^2*v+1)*x1 + v*(6γ^2*(1+v^2)+1)*x2 + (2v^2+1)*x3)/μ^4\n",
-    "    f₅ = -3χ₁*γ*v*(2γ^2*v^2+1)/μ^3 - 12χ₂*(v*(6γ^2*v^2+3)*x1 +3*(1+6γ^2*v^2)*x2 + 3v*x3)/μ^4\n",
-    "    \n",
+    "    f₅ = -3χ₁*γ*v*(2γ^2*v^2+1)/μ^3/T - 12χ₂*(v*(6γ^2*v^2+3)*x1 +3*(1+6γ^2*v^2)*x2 + 3v*x3)/μ^4\n",
     "    return [f₁;f₂;f₃;f₄;f₅]\n",
     "end"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "5-element Array{Float64,1}:\n",
-       "  0.0\n",
-       "  8.881784197001252e-16\n",
-       "  0.0\n",
-       "  0.0\n",
-       " -0.05709153436369396"
+       " 0.0\n",
+       " 8.881784197001252e-16\n",
+       " 0.0\n",
+       " 0.0\n",
+       " 4.440892098500626e-16"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -89,21 +88,94 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\\begin{eqnarray*}\n",
+    "    I^o &=& - \\frac{2\\left(\\gamma^2 - 1/4\\right)}{5 \\gamma \\lambda \\sqrt{-\\mu}} X_1 - \\frac{2\\gamma v \\sqrt{-\\mu}}{\\kappa} X_2 - \\frac{v^2}{\\gamma\\lambda \\sqrt{-\\mu}} X_3 \\nonumber \\\\\n",
+    "    I^1 &=& - \\frac{2\\gamma v}{5 \\lambda \\sqrt{-\\mu}} X_1 - \\frac{\\gamma (v^2 + 1) \\sqrt{-\\mu}}{\\kappa} X_2 - \\frac{v}{\\gamma\\lambda \\sqrt{-\\mu}} X_3 \\nonumber \\\\\n",
+    "    I^2 &=& - \\frac{2\\left(\\gamma^2 v^2 + 1/4\\right)}{5 \\gamma \\lambda \\sqrt{-\\mu}} X_1 - \\frac{2\\gamma v \\sqrt{-\\mu}}{\\kappa} X_2 - \\frac{X_3}{\\gamma\\lambda \\sqrt{-\\mu}}\n",
+    "\\end{eqnarray*}\n"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1.0"
+       "Is! (generic function with 1 method)"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
+   "source": [
+    "function Is!(flu,Is,par)\n",
+    "    λ, κ = par\n",
+    "    μ = -flu[1]  # esto es -μ\n",
+    "    #μ = view(flu,1)\n",
+    "    T = (μ)^(-1//2) # use μ positive, so I changed μ -> -μ\n",
+    "    v = flu[2]\n",
+    "    x1 = flu[3]\n",
+    "    x2 = flu[4]\n",
+    "    x3 = flu[5]\n",
+    "    γ = (1 - v^2)^(-1//2)\n",
+    "    Is[1] = -2//5*(γ^2-1//4)*T*x1/(γ*λ) - 2γ*v*x2/T/κ - v^2*T*x3/(γ*λ)\n",
+    "    Is[2] = -2//5*γ*v*T*x1/λ - γ*(v^2+1)*x2/T/κ - v*T*x3/(γ*λ)\n",
+    "    Is[3] = -2//5*(γ^2*v^2+1//4)*T*x1/λ/γ - 2γ*v*x2/T/κ - T*x3/(γ*λ)\n",
+    "    return Is\n",
+    "end"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "obtuve los siguientes valores para los coef's de transporte,\n",
+    "lambda = 49.735919716217296\n",
+    "kappa = 16.578639905405765\n",
+    "y los siguientes para la fuente:\n",
+    "I_0 = - 0.09488575328013785\n",
+    "I_1 = - 0.12155655385334033\n",
+    "I_2 = - 0.12140081195218293"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3-element Array{Float64,1}:\n",
+       " 0.0\n",
+       " 0.0\n",
+       " 0.0"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Is = zeros(3)\n",
+    "par = (49.735919716217296,16.578639905405765)\n",
+    "I_c = [- 0.09488575328013785; - 0.12155655385334033; - 0.12140081195218293]\n",
+    "Is!(flu,Is,par) - I_c"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   },
   {
