adding new versions with extensions to handle 10 dynamical fields

--- a/Conf_Diss_code.ipynb
+++ b/Conf_Diss_code.ipynb
@@ -32,9 +32,8 @@
     "t=1. # final time\n",
     "dx = L/M\n",
     "dt = 0.1 * dx\n",
-    "U=5 # number of fields\n",
-    "flu_i=zeros(M*U) # flux variables for the initial data (these are used for the flux function)\n",
-    "con_i=zeros(M*U) # conservative initial data (these are the ones which are evolved)\n",
+    "U=10 # number of fields (double the number of fields, one for fluid and the other for conservative quantities)\n",
+    "u_i=zeros(M*U) # flux variables for the initial data (these are used for the flux function)\n",
     "du=zeros(M*U) # for the rhs\n",
     "x = zeros(M) # the coordinates\n",
     "χ = [- 1.; - 2.; - 10.]\n",
