--- a/test_inversion.ipynb
+++ b/test_inversion.ipynb
@@ -14,7 +14,15 @@
       "######################################################################### 100.0%\n",
       "\u001b[32m\u001b[1m  Resolving\u001b[22m\u001b[39m package versions...\n",
       "\u001b[32m\u001b[1mNo Changes\u001b[22m\u001b[39m to `~/Julia/Fluidos_Conformes/Conf_Fluids/Project.toml`\n",
-      "\u001b[32m\u001b[1mNo Changes\u001b[22m\u001b[39m to `~/Julia/Fluidos_Conformes/Conf_Fluids/Manifest.toml`\n"
+      "\u001b[32m\u001b[1mNo Changes\u001b[22m\u001b[39m to `~/Julia/Fluidos_Conformes/Conf_Fluids/Manifest.toml`\n",
+      "┌ Info: Precompiling Symbolics [0c5d862f-8b57-4792-8d23-62f2024744c7]\n",
+      "└ @ Base loading.jl:1278\n",
+      "┌ Warning: The call to compilecache failed to create a usable precompiled cache file for Distributions [31c24e10-a181-5473-b8eb-7969acd0382f]\n",
+      "│   exception = Required dependency StatsFuns [4c63d2b9-4356-54db-8cca-17b64c39e42c] failed to load from a cache file.\n",
+      "└ @ Base loading.jl:1042\n",
+      "┌ Warning: The call to compilecache failed to create a usable precompiled cache file for Symbolics [0c5d862f-8b57-4792-8d23-62f2024744c7]\n",
+      "│   exception = ErrorException(\"Required dependency SciMLBase [0bca4576-84f4-4d90-8ffe-ffa030f20462] failed to load from a cache file.\")\n",
+      "└ @ Base loading.jl:1042\n"
      ]
     },
     {
