adding the Euler equations by direct inversion

--- a/test_inversion_ext.ipynb
+++ b/test_inversion_ext.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 174,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -18,10 +18,10 @@
     {
      "data": {
       "text/plain": [
-       "f_to_c!"
+       "c_to_f_direct! (generic function with 1 method)"
       ]
      },
-     "execution_count": 174,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -31,8 +31,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Checking f_to_c"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 175,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -74,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 176,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -88,7 +95,7 @@
        " 0.04927907295689818"
       ]
      },
-     "execution_count": 176,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -119,14 +126,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 178,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  0.000073 seconds (34 allocations: 2.156 KiB)\n"
+      "  0.292044 seconds (1.08 M allocations: 45.334 MiB, 8.01% gc time)\n"
      ]
     },
     {
@@ -138,20 +145,158 @@
        "  0.0\n",
        "  0.0\n",
        "  0.0\n",
-       "  4.806112841038157e-9\n",
-       "  2.941994980965035e-10\n",
-       " -2.7242426092755068e-9\n",
-       " -2.2971502477986405e-9\n",
-       " -1.4237011569662172e-10"
+       "  3.3650164255050186e-7\n",
+       "  5.300992977907981e-11\n",
+       " -1.3363915640773882e-7\n",
+       " -2.0150819324271652e-7\n",
+       "  6.993196866034168e-8"
       ]
      },
-     "execution_count": 178,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "@time c_to_f!(u0, p) - u"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Testing with Euler"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.06333333333333332, 0.016666666666666666, 0.0, 0.0, 0.0, -10.0, 0.2, 0.0, 0.0, 0.0]\n"
+     ]
+    }
+   ],
+   "source": [
+    "N=10\n",
+    "M=1\n",
+    "χ = [-1.0; 0.0; -1.0] #put the interaction term to zero\n",
+    "p = (χ, N, M)\n",
+    "u = zeros(N*M)\n",
+    "u0 = zeros(N*M)\n",
+    "\n",
+    "con0 = view(reshape(u0,(M,N)),:,1:5)\n",
+    "flu0 = view(reshape(u0,(M,N)),:,6:10)\n",
+    "con = view(reshape(u,(M,N)),:,1:5)\n",
+    "flu = view(reshape(u,(M,N)),:,6:10)\n",
+    "\n",
+    "flu0[1,:] = [-10.0, 0.2, 0., 0., 0.]\n",
+    "flu[1,:] = [-10.0, 0.2, 0., 0., 0.]\n",
+    "#flu0[1,:] = [-10.0, 0.2, 1.1, 1.5, 1.2]\n",
+    "\n",
+    "println(f_to_c!(u0,p))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "10-element Array{Float64,1}:\n",
+       "   0.06333333333333332\n",
+       "   0.016666666666666666\n",
+       "   0.0\n",
+       "   0.0\n",
+       "   0.0\n",
+       " -10.0\n",
+       "   0.2\n",
+       "   0.0\n",
+       "   0.0\n",
+       "   0.0"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "flu[1,1] = -flu[1,1]\n",
+    "con[1,:] = F(flu,con,χ)\n",
+    "flu[1,1] = -flu[1,1];\n",
+    "u"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.06333333333333332, 0.016666666666666666, 0.0, 0.0, 0.0, -10.0, 0.2, 0.0, 0.0, 0.0]\n",
+      "[0.1366314976448222, 0.07009306769467444, 0.06115332989597844, 0.07178418128379448, 0.04927907295689818, -10.0, 0.2, 0.0, 0.0, 0.0]\n",
+      "[0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0]\n",
+      "[0.06333333333333332, 0.016666666666666666, 0.0, 0.0, 0.0, -10.0, 0.2, 0.0, 0.0, 0.0]\n"
+     ]
+    }
+   ],
+   "source": [
+    "con0 = view(reshape(u0,(M,N)),:,1:5)\n",
+    "flu0 = view(reshape(u0,(M,N)),:,6:10)\n",
+    "\n",
+    "flu0[1,:] = [-10.0, 0.2, 0,0,0]\n",
+    "\n",
+    "println(u0)\n",
+    "println(u)\n",
+    "println(f_to_c!(u,p) - u)\n",
+    "println(u0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  0.000026 seconds (6 allocations: 512 bytes)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "10-element Array{Float64,1}:\n",
+       "  0.0\n",
+       "  0.0\n",
+       "  0.0\n",
+       "  0.0\n",
+       "  0.0\n",
+       " -1.7763568394002505e-15\n",
+       "  0.0\n",
+       "  0.0\n",
+       "  0.0\n",
+       "  0.0"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "@time c_to_f_direct!(u0,p) - u"
    ]
   },
   {
