--- a/inversion-Euler.ipynb
+++ b/inversion-Euler.ipynb
@@ -51,7 +51,10 @@
     "## Euler equations\n",
     "\n",
     "We recuperate Euler's equations setting $\\chi_1 = 0$ and the dissipative variables to zero. That way the systems decouple. And we get: (the notation here is a bit misleading,\n",
-    "here $\\rho \\approx e$ Different from $E = (\\rho + p) = 4/3 \\rho$, since $p = \\frac{1}{3}\\rho$ and so $s = Ev = 4/3 e v$\n",
+    "here \n",
+    "$\\rho = \\frac{-6χ₀}{μ^2}$, $T = \\frac{1}{\\sqrt{-\\mu}}$\n",
+    "\n",
+    "$\\rho \\approx e$ Different from $E = (\\rho + p) = 4/3 \\rho$, since $p = \\frac{1}{3}\\rho$ and so $s = Ev = 4/3 e v$\n",
     "\n",
     "$F_e = \\frac{4}{3}ργ^2v = s$\n",
     "\n",
@@ -71,6 +74,34 @@
     "$v = 2\\frac{e}{s} \\pm \\sqrt{4(\\frac{e}{s})^2 -3}$\n",
     "\n",
     "$v_- =  \\frac{3}{2\\frac{e}{s} + \\sqrt{4(\\frac{e}{s})^2 -3}} \\approx \\frac{3s}{4e}$\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Non relativistic limit and eigenmodes\n",
+    "\n",
+    "$e = \\rho = \\frac{6}{\\mu^2}$ $e = e_0 + \\delta e$\n",
+    "\n",
+    "$s = \\frac{4}{3}e v$ $s = \\delta s$\n",
+    "\n",
+    "$\\dot \\delta e = \\delta \\delta s_x$\n",
+    "$\\dot \\delta s = \\frac{1}{3} \\delta e_x$\n",
+    "\n",
+    "so $c = \\pm \\frac{1}{\\sqrt{3}}$\n",
+    "\n",
+    "$\\delta s = \\pm c \\delta e$\n",
+    "\n",
+    "We now want this in fluid variables:\n",
+    "\n",
+    "$v = \\frac{3s}{4e}$ and so \n",
+    "$\\delta v = \\frac{3\\delta s}{4e} - \\frac{3s}{4e^2} \\delta e = [\\frac{\\pm 3c}{4} - v]\\frac{\\delta e}{e}$\n",
+    "\n",
+    "$e = \\frac{6}{\\mu^2}$, $\\delta e = -\\frac{2}{\\mu}\\delta{\\mu}$\n",
+    "\n",
+    "$\\delta v = -[\\frac{\\pm 3c}{4} - v]\\frac{2}{\\mu}\\delta{\\mu}$\n",
+    "\n"
    ]
   },
   {
