--- a/test_Flux_function.ipynb
+++ b/test_Flux_function.ipynb
@@ -2,62 +2,72 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Is!"
+       "Speed_max (generic function with 1 method)"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "include(\"Flux_function.jl\")"
+    "include(\"Flux_function_ext.jl\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "5-element Array{Float64,1}:\n",
-       " 0.0\n",
-       " 8.881784197001252e-16\n",
-       " 0.0\n",
-       " 0.0\n",
-       " 4.440892098500626e-16"
+       "10-element Vector{Float64}:\n",
+       "  0.0\n",
+       " -8.881784197001252e-16\n",
+       "  8.881784197001252e-16\n",
+       "  0.0\n",
+       " -4.440892098500626e-16\n",
+       "  0.0\n",
+       "  0.0\n",
+       "  0.0\n",
+       "  0.0\n",
+       "  0.0"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "χ = [- 1.; - 2.; - 10.]\n",
-    "flu = [- 5.; 0.5; 2.1; 0.5; 5.1]\n",
-    "Flu = [5.921317694643806; 6.02302807825841; 3.713391378258412;  4.136735467078638; 3.444079555898864]\n",
+    "flu = [0.;0.;0.;0.;0.;- 5.; 0.5; 2.1; 0.5; 5.1]\n",
+    "Flu = [5.921317694643806; 6.02302807825841; 3.713391378258412;  4.136735467078638; 3.444079555898864; 0.;0.;0.;0.;0.]\n",
     "\n",
-    "Flux(flu,χ) - Flu"
+    "Flux(flu,χ) + Flu # this are the correct signs so that the flux has the correct expression on the mp5"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "5-element Array{Float64,1}:\n",
+       "10-element Vector{Float64}:\n",
+       " 0.0\n",
+       " 0.0\n",
+       " 1.3877787807814457e-17\n",
+       " 1.3877787807814457e-17\n",
+       " 1.3877787807814457e-17\n",
        " 0.0\n",
        " 0.0\n",
        " 0.0\n",
@@ -65,16 +75,16 @@
        " 0.0"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "Is = zeros(5)\n",
+    "t=0\n",
     "par = (49.735919716217296,16.578639905405765)\n",
-    "I_c = [0.; 0.; - 0.09488575328013785; - 0.12155655385334033; - 0.12140081195218293]\n",
-    "Is!(flu,Is,par) - I_c"
+    "I_c = [0.; 0.; - 0.09488575328013785; - 0.12155655385334033; - 0.12140081195218293; 0.;0.;0.;0.;0.]\n",
+    "Is(flu,t,par) - I_c"
    ]
   },
   {
@@ -94,15 +104,15 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Julia 1.5.3",
+   "display_name": "Julia 1.6.0",
    "language": "julia",
-   "name": "julia-1.5"
+   "name": "julia-1.6"
   },
   "language_info": {
    "file_extension": ".jl",
    "mimetype": "application/julia",
    "name": "julia",
-   "version": "1.5.3"
+   "version": "1.6.0"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
