--- a/Principal_Symbol.ipynb
+++ b/Principal_Symbol.ipynb
@@ -2,11 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 166,
    "metadata": {},
    "outputs": [],
    "source": [
-    "using Symbolics"
+    "using Symbolics\n",
+    "using LinearAlgebra"
    ]
   },
   {
@@ -226,6 +227,44 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 164,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "\\begin{equation}\n",
+       "\\left[\n",
+       "\\begin{array}{ccccc}\n",
+       "0.0 & \\frac{0.08333333333333333 \\left(  - 8 p{_1} + \\frac{60.0 p{_2}^{2}}{\\left(  - 36.0 p{_3} + \\frac{3.75 p{_2}^{2}}{p{_1}} \\right)} \\right)}{p{_1}} & 0.0 & \\frac{0.08333333333333333 \\left( 10 p{_1} + \\frac{6.0 p{_2} \\left(  - 6.25 p{_2} - 60.0 p{_3} \\right)}{\\left(  - 36.0 p{_3} + \\frac{3.75 p{_2}^{2}}{p{_1}} \\right)} \\right)}{p{_1}} & 0.0 \\\\\n",
+       " - \\frac{\\frac{1}{8} \\left( 4.0 p{_1} - \\frac{100.0 p{_1} p{_2}}{\\left( 18.75 p{_2} - 60.0 p{_3} \\right)} \\right)}{p{_1}} & 0.0 &  - \\frac{\\frac{1}{8} \\left(  - 2.0 p{_2} + \\frac{10 p{_1} \\left(  - 12 p{_3} + \\frac{3.75 p{_2}^{2}}{p{_1}} \\right)}{\\left( 18.75 p{_2} - 60.0 p{_3} \\right)} \\right)}{p{_1}} & 0.0 &  - \\frac{\\frac{1}{8} \\left( 2 p{_2} + \\frac{10 p{_1} \\left(  - 12 p{_3} - \\frac{3.75 p{_2}^{2}}{p{_1}} \\right)}{\\left( 18.75 p{_2} - 60.0 p{_3} \\right)} \\right)}{p{_1}} \\\\\n",
+       "0.0 & \\frac{10.0 p{_2}}{\\left(  - 36.0 p{_3} + \\frac{3.75 p{_2}^{2}}{p{_1}} \\right)} & -0.0 & \\frac{\\left(  - 6.25 p{_2} - 60.0 p{_3} \\right)}{\\left(  - 36.0 p{_3} + \\frac{3.75 p{_2}^{2}}{p{_1}} \\right)} & -0.0 \\\\\n",
+       " - \\frac{10.0 p{_2}}{\\left( 18.75 p{_2} - 60.0 p{_3} \\right)} & 0.0 & \\frac{\\left(  - 12 p{_3} + \\frac{3.75 p{_2}^{2}}{p{_1}} \\right)}{\\left( 18.75 p{_2} - 60.0 p{_3} \\right)} & -0.0 & \\frac{\\left(  - 12 p{_3} - \\frac{3.75 p{_2}^{2}}{p{_1}} \\right)}{\\left( 18.75 p{_2} - 60.0 p{_3} \\right)} \\\\\n",
+       "0.0 &  - \\frac{\\frac{1}{12} \\left( 8.0 p{_2} - \\frac{10.0 p{_2} \\left(  - 12 p{_3} + \\frac{3.75 p{_2}^{2}}{p{_1}} \\right)}{\\left(  - 36.0 p{_3} + \\frac{3.75 p{_2}^{2}}{p{_1}} \\right)} \\right)}{p{_3}} & -0.0 &  - \\frac{\\frac{1}{12} \\left(  - 6.25 p{_2} - 36.0 p{_3} - \\frac{\\left(  - 6.25 p{_2} - 60.0 p{_3} \\right) \\left(  - 12 p{_3} + \\frac{3.75 p{_2}^{2}}{p{_1}} \\right)}{\\left(  - 36.0 p{_3} + \\frac{3.75 p{_2}^{2}}{p{_1}} \\right)} \\right)}{p{_3}} & -0.0 \\\\\n",
+       "\\end{array}\n",
+       "\\right]\n",
+       "\\end{equation}\n"
+      ],
+      "text/plain": [
+       "5×5 Matrix{Num}:\n",
+       "                  0.0                                              …                                              0.0\n",
+       " (-1//8)*(p₁^-1)*(4.0p₁ - (100.0p₁*p₂*((18.75p₂ - (60.0p₃))^-1)))     (-1//8)*(p₁^-1)*((2//1)*p₂ + 10p₁*(-12p₃ - (3.75(p₁^-1)*(p₂^2)))*((18.75p₂ - (60.0p₃))^-1))\n",
+       "                  0.0                                                                                            -0.0\n",
+       "                -10.0p₂*((18.75p₂ - (60.0p₃))^-1)                                                       (-12p₃ - (3.75(p₁^-1)*(p₂^2)))*((18.75p₂ - (60.0p₃))^-1)\n",
+       "                  0.0                                                                                            -0.0"
+      ]
+     },
+     "execution_count": 164,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "P(flu,c,p)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 107,
    "metadata": {},
    "outputs": [
@@ -325,38 +364,38 @@
     }
    ],
    "source": [
-    "using LinearAlgebra\n",
+    "\n",
     "eigvals(M)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 177,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "5-element Vector{Float64}:\n",
-       " -0.8244305807435981\n",
-       " -0.5470514768565733\n",
-       "  4.511348077511598e-18\n",
-       "  0.5470514768565726\n",
-       "  0.8244305807435975"
+       " -1.1370084548097363\n",
+       " -0.4303061738771479\n",
+       "  1.7551571048406045e-18\n",
+       "  0.4303061738771482\n",
+       "  1.1370084548097377"
       ]
      },
-     "execution_count": 111,
+     "execution_count": 177,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "eigvals(P(flu,c,[-1,-0.5,-10]))"
+    "eigvals(P(flu,c,[-1,-0.5,-1]))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 178,
    "metadata": {},
    "outputs": [
     {
@@ -365,7 +404,7 @@
        "Is (generic function with 1 method)"
       ]
      },
-     "execution_count": 145,
+     "execution_count": 178,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -401,7 +440,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 179,
    "metadata": {},
    "outputs": [
     {
@@ -428,7 +467,7 @@
        " 3.141592653589793f₅*(f₁^(-9//2))*(p₁^-1)*(p₂^2)*((1.0 - (f₂^2))^(1//2)) - (94.24777960769379f₂*f₄*(f₁^(-9//2))*(p₁^-1)*(p₂^2)*((1.0 - (f₂^2))^(-1//2))) - (3.141592653589793f₃*(f₁^(-9//2))*(p₁^-1)*(p₂^2)*((1.0 - (f₂^2))^(1//2))*((-1//10) - ((2//5)*(f₂^2)*((1.0 - (f₂^2))^(-1//1)))))"
       ]
      },
-     "execution_count": 146,
+     "execution_count": 179,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -439,7 +478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 180,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -450,7 +489,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 181,
    "metadata": {},
    "outputs": [
     {
@@ -477,7 +516,7 @@
        " 0.0  0.0  0.314159(p₁^-1)*(p₂^2)     3.14159(p₁^-1)*(p₂^2)"
       ]
      },
-     "execution_count": 153,
+     "execution_count": 181,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -490,7 +529,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 182,
    "metadata": {},
    "outputs": [
     {
@@ -499,7 +538,7 @@
        "II (generic function with 1 method)"
       ]
      },
-     "execution_count": 155,
+     "execution_count": 182,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -510,27 +549,66 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 183,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "\\begin{equation}\n",
+       "\\left[\n",
+       "\\begin{array}{ccccc}\n",
+       "0 & 0 & \\frac{0.471238898038469 p{_2}^{3}}{\\left(  - 36.0 p{_3} + \\frac{3.75 p{_2}^{2}}{p{_1}} \\right) p{_1}^{2}} & 0 & 0 \\\\\n",
+       "0 & 0 & 0 & \\frac{58.90486225480862 p{_2}^{2}}{\\left( 18.75 p{_2} - 60.0 p{_3} \\right) p{_1}} & 0 \\\\\n",
+       "0.0 & 0.0 & \\frac{0.942477796076938 p{_2}^{2}}{\\left(  - 36.0 p{_3} + \\frac{3.75 p{_2}^{2}}{p{_1}} \\right) p{_1}} & -0.0 & 0.0 \\\\\n",
+       "0.0 & 0.0 & 0.0 &  - \\frac{47.12388980384689 p{_2}^{2}}{\\left( 18.75 p{_2} - 60.0 p{_3} \\right) p{_1}} & 0.0 \\\\\n",
+       "0.0 & 0.0 &  - \\frac{\\frac{1}{12} \\left( \\frac{0.3141592653589793 p{_2}^{2}}{p{_1}} - \\frac{0.942477796076938 p{_2}^{2} \\left(  - 12 p{_3} + \\frac{3.75 p{_2}^{2}}{p{_1}} \\right)}{\\left(  - 36.0 p{_3} + \\frac{3.75 p{_2}^{2}}{p{_1}} \\right) p{_1}} \\right)}{p{_3}} & -0.0 &  - \\frac{0.2617993877991494 p{_2}^{2}}{p{_3} p{_1}} \\\\\n",
+       "\\end{array}\n",
+       "\\right]\n",
+       "\\end{equation}\n"
+      ],
+      "text/plain": [
+       "5×5 Matrix{Num}:\n",
+       " 0    0    …   0\n",
+       " 0    0        0\n",
+       " 0.0  0.0      0.0\n",
+       " 0.0  0.0      0.0\n",
+       " 0.0  0.0     -0.261799(p₁^-1)*(p₂^2)*(p₃^-1)"
+      ]
+     },
+     "execution_count": 183,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "II(flu,c,p)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 202,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "5-element Vector{ComplexF64}:\n",
-       " -0.0075483446612882865 + 0.8243292487032997im\n",
-       "  -0.007548344661287929 - 0.8243292487032999im\n",
-       " -0.0007850121528142698 + 0.5470622496376942im\n",
-       " -0.0007850121528140658 - 0.5470622496376945im\n",
-       "   0.003921285643176693 - 4.9157954344187785e-18im"
+       "  -0.04053667940115862 + 0.0im\n",
+       "                   0.0 - 0.0im\n",
+       "                   0.0 + 0.0im\n",
+       " 0.0013158503261109084 + 0.0im\n",
+       "   0.01308996938995747 + 0.0im"
       ]
      },
-     "execution_count": 160,
+     "execution_count": 202,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "eigvals(im .* P(flu,c,[-1,-0.5,-10]) - II(flu,c,[-1,-0.5,-10]))"
+    "par = [-1,-0.50,-5]\n",
+    "eigvals(0.0*im .* P(flu,c,par) - II(flu,c,par))"
    ]
   },
   {
