--- a/test_Flux_function.ipynb
+++ b/test_Flux_function.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -11,7 +11,7 @@
        "Speed_max (generic function with 1 method)"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -41,7 +41,7 @@
        "  0.0"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -75,14 +75,14 @@
        " 0.0"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "t=0\n",
-    "par = (49.735919716217296,16.578639905405765)\n",
+    "par = ([-1., -2., -10.], -1)\n",
     "I_c = [0.; 0.; - 0.09488575328013785; - 0.12155655385334033; - 0.12140081195218293; 0.;0.;0.;0.;0.]\n",
     "Is(flu,t,par) - I_c"
    ]
@@ -104,7 +104,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Julia 1.6.0",
+   "display_name": "Julia 1.6.1",
    "language": "julia",
    "name": "julia-1.6"
   },
@@ -112,7 +112,7 @@
    "file_extension": ".jl",
    "mimetype": "application/julia",
    "name": "julia",
-   "version": "1.6.0"
+   "version": "1.6.1"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
